fixed word spacing

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -22,6 +22,7 @@
   color: #303030;
   letter-spacing: -0.04em;
   line-height: 0.9em;
+  word-spacing: -0.2em;
 }
 
 .header-logo img {
