--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -875,6 +875,7 @@ table td {
   color: #303030;
   letter-spacing: -0.04em;
   line-height: 0.9em;
+  word-spacing: -0.2em;
 }
 
 .header-logo img {
